manifest/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: vdt
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - vote.service
    - result.service
    secretName: tls-secret
  rules:
    - host: "vote.service"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 8080
    - host: "result.service" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result 
                port:
                  number: 8081
